--- a/package.json
+++ b/package.json
@@ -1,23 +1,68 @@
 {
   "name": "evil-blocks",
   "version": "0.7.0",
-  "dependencies": {
-    "jquery": ">= 2.1.0"
-  },
+  "description": "Tiny JS framework for web pages to split your app to independent blocks",
   "license": "MIT",
+  "homepage": "https://github.com/ai/evil-blocks",
+  "bugs": {
+    "url": "https://github.com/ai/evil-blocks/issues"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ai/evil-blocks.git"
+    "url": "https://github.com/ai/evil-blocks"
+  },
+  "contributors": [
+    "Andrey Sitnik <andrey@sitnik.ru>",
+    "Alexey Plutalov <demiazz.py@gmail.com>"
+  ],
+  "main": "dist/evil-blocks.js",
+  "module": "dist/evil-blocks.es.js",
+  "jsnext:main": "dist/evil-blocks.es.js",
+  "files": [
+    "dist",
+    "LICENSE",
+    "README.md"
+  ],
+  "scripts": {
+    "lint": "$(npm bin)/eslint build src spec",
+    "pretest": "npm run lint",
+    "test": "cross-env NODE_ENV=test $(npm bin)/karma start build/karma.local.js --single-run",
+    "test:watch": "cross-env NODE_ENV=test $(npm bin)/karma start build/karma.local.js",
+    "test:ci": "cross-env NODE_ENV=test $(npm bin)/karma start build/karma.ci.js",
+    "build:dist": "node build/rollup.js",
+    "build:docs": "node build/docs.js",
+    "build": "npm run build:dist && npm run build:docs",
+    "version": "npm run build && git add -A dist && git add -A README.md"
+  },
+  "dependencies": {
+    "lighty": "^0.8.0",
+    "jquery": ">= 1.11.0"
   },
   "devDependencies": {
-    "coffee-script": "1.10.0",
-    "uglify-js":     "2.6.1",
-    "fs-extra":      "0.26.4",
-    "should":        "8.1.1",
-    "mocha":         "2.3.4",
-    "jsdom":         "7.2.2"
-  },
-  "scripts": {
-    "test": "mocha"
+    "babel-eslint": "^7.1.1",
+    "cross-env": "^3.1.3",
+    "eslint": "^3.10.2",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.7.1",
+    "jasmine-core": "^2.5.2",
+    "jsdoc-to-markdown": "^2.0.1",
+    "karma": "^1.3.0",
+    "karma-coverage": "^1.1.1",
+    "karma-coveralls": "^1.1.2",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-rollup-plugin": "^0.2.4",
+    "karma-sauce-launcher": "^1.1.0",
+    "karma-spec-reporter": "0.0.26",
+    "phantomjs-prebuilt": "^2.1.13",
+    "rollup": "^0.37.0",
+    "rollup-plugin-buble": "^0.15.0",
+    "rollup-plugin-commonjs": "^6.0.0",
+    "rollup-plugin-istanbul": "^1.1.0",
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-uglify": "^1.0.1",
+    "uglify-save-license": "^0.4.1"
   }
 }
